--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
